# nvdb2osmr

./: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  README.md  README.qmd  rextendr.config
R/: column_mappings.R  extendr-wrappers.R  geoparquet.R  nvdb_to_pbf.R  process_nvdb_fast.R
inst/extdata/: column_mappings.yaml
man/: get_column_mappings.Rd  get_long_name.Rd  list_columns.Rd  nvdb_to_pbf.Rd  process_nvdb_fast.Rd  process_nvdb_wkb.Rd
src/: Makevars  Makevars.win  entrypoint.c
src/.cargo/: config.toml
src/rust/: Cargo.toml
src/rust/src/: lib.rs
src/rust/src/geometry/: mod.rs
src/rust/src/grouping/: mod.rs
src/rust/src/models/: mod.rs
src/rust/src/tag_mapper/: mod.rs  nodes.rs
src/rust/src/topology/: mod.rs
tests/: testthat.R
tests/testthat/: test-global-prepass-guards.R  test-mirai-state.R  test-nvdb2osmr.R
