[package]
name = "nvdb2osmr"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
extendr-api = "*"
geo = "0.28"
geo-types = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustc-hash = "1.1"

# Vendored pbf-craft (frozen at commit 6c06553)
pbf-craft = { path = "vendor/pbf-craft/pbf-craft" }
